static/styles/connect.css
div.row > div > img,
div.row > div > table,
div.row > div > div,
div.row > div > div > table{
    width: 100%;
}

div.table_container {
    display: block;
}

table, thead, tbody, tr, th, td {
  border-collapse: collapse;
}

th, td {
  border: 1pt solid #AAA;
}

tr > td:first-child {
  font-weight: bold;
}

h2.table_title {
    display: inline-block;
    font-size: 6pt;
    margin: 1% 3%;
    position: absolute;
    right: 0;
}

p.table_source {
    font-size: 7pt;
    color: #888;
    font-style: italic;
    position: absolute;
    right: 20px;
}


/* Print-specific rules */
@media print {
    @page {
        size: 8.5in 11in;
        margin:0.15in 0.20in 0.25in;

        @bottom-right {
            font-size: 12pt;
            /*width:35%;*/
            text-align:right;
            vertical-align: top;
            content: "Created by the Connecticut Data Collaborative | connect.ctdata.org";
        }
    }
    body {
        border-bottom: 2px solid #BBB;
        font-size:8pt;
        margin:0!important;

        height: 750pt;
        display: block;

        border-bottom: 2px solid #BBB;
    }
    div.header {
        position: fixed;
        height: 50pt;
        width: 100%;
        display: block;
        clear: both;

        border-bottom: 1px solid #999;
    }
    div.header h1 {
        font-size: 24pt;
        margin: 0 auto;
    }
    div.content {
        padding-top: 70pt;
    }
    div.section,
    div.row {
        page-break-inside: avoid;
    }
    .noprint {
        display: none;
    }
}

@media screen {
    body {
        height:800px;
    }
}

